--- a/src/Scheduler.WebConsole/Views/Shared/_Layout.cshtml
+++ b/src/Scheduler.WebConsole/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <script src="~/Scripts/jquery-3.2.1.min.js"></script>
+    <script src="~/Scripts/jquery-ui.min.js"></script>
     <script src="~/Scripts/jquery.signalR-2.2.2.min.js"></script>
     <script src="/signalr/hubs"></script>
 
