Fixing misspelling; Changing error handling; Adding description to the jobs

--- a/src/Scheduler.WebConsole/Views/Scheduler/Index.cshtml
+++ b/src/Scheduler.WebConsole/Views/Scheduler/Index.cshtml
@@ -102,13 +102,13 @@
 <script id="jobDetails-template" type="text/x-handlebars-template">
     <tr id="job_{{Group}}_{{Name}}">
         <td class="jobName">{{Name}}</td>
-        <td class="jobGroup">{{Group}}</td>
+        <td class="jobGroup">{{Description}}</td>
         <td class="jobSchedule">{{Schedule}}</td>
         <td class="jobPrevFireTime">{{PreviousFireTime}}</td>
         <td class="jobNextFireTime">{{NextFireTime}}</td>
         <td class="jobState">{{State}}</td>
         <td class="text-center">
-            <button id="jobTrigger_{{Group}}_{{Name}}" class="btn btn-primary triggerJob">Execute Now</button>
+            <button id="jobTrigger_{{Group}}_{{Name}}" class="btn btn-primary triggerJob {{#if IsExecuting}}disabled{{/if}}">Execute Now</button>
         </td>
         <td class="text-center">
             <input id="jobState_{{Group}}_{{Name}}" type="checkbox" checked data-toggle="toggle" data-on="Enabled" data-off="Disabled" data-onstyle="success" data-offstyle="danger">
