Adding Instance ID to Engine Info section

--- a/src/Scheduler.WebConsole/Views/Scheduler/Index.cshtml
+++ b/src/Scheduler.WebConsole/Views/Scheduler/Index.cshtml
@@ -56,14 +56,18 @@
                     <div class="panel-heading">System information</div>
                     <table class="table table-striped table-bordered">
                         <tbody>
-                        <tr>
-                            <th class="col-md-5">Running since</th>
-                            <td id="scheduler-startDate" class="col-md-7"></td>
-                        </tr>
-                        <tr>
-                            <th class="col-md-5">Version</th>
-                            <td id="scheduler-version" class="col-md-7"></td>
-                        </tr>
+                            <tr>
+                                <th class="col-md-5">Instance ID</th>
+                                <td id="scheduler-instanceId" class="col-md-7"></td>
+                            </tr>
+                            <tr>
+                                <th class="col-md-5">Running since</th>
+                                <td id="scheduler-startDate" class="col-md-7"></td>
+                            </tr>
+                            <tr>
+                                <th class="col-md-5">Version</th>
+                                <td id="scheduler-version" class="col-md-7"></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
