DAL refactoring; updating UI screen and adding two more values (Instance ID and Instance Name)

--- a/src/Scheduler.WebConsole/Views/Scheduler/Index.cshtml
+++ b/src/Scheduler.WebConsole/Views/Scheduler/Index.cshtml
@@ -61,6 +61,10 @@
                                 <td id="scheduler-instanceId" class="col-md-7"></td>
                             </tr>
                             <tr>
+                                <th class="col-md-5">Instance Name</th>
+                                <td id="scheduler-instanceName" class="col-md-7"></td>
+                            </tr>
+                            <tr>
                                 <th class="col-md-5">Running since</th>
                                 <td id="scheduler-startDate" class="col-md-7"></td>
                             </tr>
